--- a/index.html
+++ b/index.html
@@ -1,18 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-	<head>
-		<meta charset=utf-8>
-		<meta name=viewport content="width=device-width,initial-scale=1">
-		<title>无忧music</title>
-		<link href='./static/css/4ad05579c54e01a8362dab7e031d2c0b.css' rel='stylesheet'>
-		<link rel="stylesheet" href="./static/css/music.css" />
-	</head>
-	<body>
-		<div id=app></div>
-		<script type='text/javascript' src='./static/js/manifest.2ae2e69a05c33dfc65f8.js'></script>
-		<script type='text/javascript' src='./static/js/vendor.56dca520bf9e8f1a7d83.js'></script>
-		<script type='text/javascript' src='./static/js/app.2aa25e5408117fd1a5cc.js'></script>
-	</body>
-
-</html>
+<!DOCTYPE html><html><head><meta charset=UTF-8><meta name=keywords content=""><meta name=description content=不超过150个字符><meta name=robots content=index,follow><meta name=viewport content="initial-scale=1,maximum-scale=3,minimum-scale=1,user-scalable=no"><meta name=format-detection content="telphone=no, email=no"><title>书旗网</title><link rel=apple-touch-icon href=//t.shuqi.com/favicon.ico><link href=//img-tailor.11222.cn/pm/book/operate/2017041410001668.png rel="Shortcut Icon" type=image/x-icon><link rel=stylesheet type=text/css href=//at.alicdn.com/t/font_458653_afhbofdobbmon7b9.css><link rel="shortcut icon" href=/favicon.ico><link href=/static/css/app.2313bc9b75824f40ecf24ee3450980a9.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.d6a7a971a8fd7813b356.js></script><script type=text/javascript src=/static/js/vendor.bcd2d2c96573a68a429b.js></script><script type=text/javascript src=/static/js/app.bbd653b880984b3b812f.js></script></body></html>
