--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 			<a style="color:#23527c" href="http://www.miitbeian.gov.cn/">
 				备案号: 豫ICP备17048833号-1</a>
 		</footer>
-		<script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
+		<script src="./js/jquery-1.9.1.min.js"></script>
 		<!--雪花-->
-		<script src="js/snow.js"></script>
+		<script src="./js/snow.js"></script>
 		<script>
 			$(".pic ul li").each(function(i){//遍历
 				var deg=360/$(".pic ul li").size();//size个数
